samples/_failures_safe/1761339557_25387d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ec87679.c: In function ‘main’:
./samples/SAFE/__tmp_6ec87679.c:141: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_6ec87679.c:140:16: note: to match this ‘(’
  140 |         fprintf(stderr
      |                ^
./samples/SAFE/__tmp_6ec87679.c:140:9: error: too few arguments to function ‘fprintf’
  140 |         fprintf(stderr
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_6ec87679.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_6ec87679.c:140:9: error: expected declaration or statement at end of input
  140 |         fprintf(stderr
      |         ^~~~~~~
./samples/SAFE/__tmp_6ec87679.c:140:9: error: expected declaration or statement at end of input
